<?xml version="1.0"?>
<package format="3">
  <name>fixed_rate_replayer</name>
  <version>0.1.0</version>
  <description>Republish rosbag2 data at a fixed frequency defined in config.json</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>rcutils</depend>
  <depend>nlohmann_json</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

