<?xml version="1.0"?>
<package format="3">
  <name>ros_process_monitor</name>
  <version>0.1.0</version>
  <description>Publish CPU and memory usage for specified processes as ROS 2 messages.</description>

  <maintainer email="hengzhao.liu@robotera.com">dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

